--- a/cv/index.html
+++ b/cv/index.html
@@ -107,7 +107,7 @@ Publications</h2>
 <ul>
 <h3><left-align>2021</left-align></h3>
 
- <li>COVID-19 vaccine coverage in health-care workers in England and effectiveness of BNT162b2 mRNA vaccine against infection (SIREN): a prospective, multicentre, cohort study.<i> Hall VJ, Foulkes S, Saei A, Andrews N, Oguti B, Charlett A, Wellington E, Stowe J, Gillson N, Atti A, Islam J, Karagiannis I, Munro K, Khawam J, Chand MA, Brown CS, Ramsay M, Lopez-Bernal J, Hopkins S and <b><u>SIREN Study Group</b></u></i><b> The Lancet, 2021</b>
+ <li>COVID-19 vaccine coverage in health-care workers in England and effectiveness of BNT162b2 mRNA vaccine against infection (SIREN): a prospective, multicentre, cohort study.<i> Hall VJ, Foulkes S, Saei A, Andrews N, Oguti B, Charlett A, Wellington E, Stowe J, Gillson N, Atti A, Islam J, Karagiannis I, Munro K, Khawam J, Chand MA, Brown CS, Ramsay M, Lopez-Bernal J, Hopkins S and <b><u>SIREN Study Group.</b></u></i><b> The Lancet, 2021</b>
 (<a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(21)00790-X/fulltext#%20" target="_blank">10.1016/S0140-6736(21)00790-X</a>).</li><ul>
 
 </ul>
@@ -160,7 +160,7 @@ Peto T, <b><u>UK COVID Lateral Flow Oversight Team</b></u>.</i>
 <li>Discordant neutralizing antibody and T cell responses in asymptomatic and mild SARS-CoV-2 infection.
 
 <i>
-Reynolds CJ, Swadling L, Gibbons JM, Pade C, Jensen MP, Diniz MO, Schmidt NM, Butler DK, Amin OE, Bailey SNL, Murray SM, Pieper FP, Taylor S, Jones J, Jones M, Lee WYJ, Rosenheim J, Chandran A, Joy G, Genova CD, Temperton N, Lambourne J, Cutino-Moguel T, Andiapen M, Fontana M, Smit A, Semper A, O’Brien B, Chain B, Brooks T, Manisty C, Treibel T,  Moon JC, <b><u>COVIDsortium investigators</b></u>, Noursadeghi M,COVIDsortium immune correlates network, Altmann DM, Maini MK, McKnight A, Boyton RJ.</i>
+Reynolds CJ, Swadling L, Gibbons JM, Pade C, Jensen MP, Diniz MO, Schmidt NM, Butler DK, Amin OE, Bailey SNL, Murray SM, Pieper FP, Taylor S, Jones J, Jones M, Lee WYJ, Rosenheim J, Chandran A, Joy G, Genova CD, Temperton N, Lambourne J, Cutino-Moguel T, Andiapen M, Fontana M, Smit A, Semper A, O’Brien B, Chain B, Brooks T, Manisty C, Treibel T,  Moon JC, <b><u>COVIDsortium investigators</b></u>, Noursadeghi M, COVIDsortium immune correlates network, Altmann DM, Maini MK, McKnight A, Boyton RJ.</i>
 
 <b> Science Immunology, 2020, 5 (54)</b>
 (<a href="https://immunology.sciencemag.org/content/5/54/eabf3698" target="_blank">10.1126/sciimmunol.abf3698</a>). <b><i></b></li></i><ul>
