--- a/cv/index.html
+++ b/cv/index.html
@@ -185,7 +185,7 @@ Manisty C, Treibel TA, Jensen M, Semper A, Joy G, Gupta RK, Cutino-Moguel T, And
 
 
 <li>Do antibody positive healthcare workers have lower SARS-CoV-2 infection rates than antibody negative healthcare workers? Large multi-centre prospective cohort study (the SIREN study), England: June to November 2020. <i>Hall V, Foulkes S, Charlett A, Atti A, Monk EJM, Simmons R, Wellington E, Cole MJ, Saei A, Oguti B, Munro K, Wallace S, Kirwan PD, Shrotri M, Vusirikala A, Rokadiya S, Kall M, Zambon M, Ramsay M, Brooks T, <b><u>SIREN Study Group</b></u>, Brown CS, Chand MA, Hopkins S.</i><b> medRxiv, 2020</b>
-(<a href="https://www.medrxiv.org/content/10.1101/2021.01.13.21249642v1" target="_blank">10.1101/2021.01.13.21249642</a>). <b><i>Now published in <a href="https://www.sciencedirect.com/science/article/pii/S0140673621006759" target="_blank">The Lancet.</a></b></li><ul>
+(<a href="https://www.medrxiv.org/content/10.1101/2021.01.13.21249642v1" target="_blank">10.1101/2021.01.13.21249642</a>). <b><i>Now published in <a href="https://www.sciencedirect.com/science/article/pii/S0140673621006759" target="_blank">The Lancet.</a></b></li><ul></i>
 <li>Press coverage: 
 
 <a href="https://www.theguardian.com/australia-news/2021/jan/30/immunological-unicorn-the-australian-lab-growing-coronavirus-and-its-startling-discovery" target="_blank">The Guardian</a>, 
@@ -207,6 +207,13 @@ Manisty C, Treibel TA, Jensen M, Semper A, Joy G, Gupta RK, Cutino-Moguel T, And
   <li>A novel inducible prophage from <i>Burkholderia vietnamiensis</i> G4 is widely distributed across the species and has lytic activity against pathogenic Burkholderia.<i> Weiser R, Yap ZL, <b><u>Otter A</b></u>, Jones BV, Salvage J, Parkhill J, Mahenthiralingam E </i>. <b>Viruses, 2020, 12 (6), 601</b> (<a href="https://www.mdpi.com/1999-4915/12/6/601" target="_blank">10.3390/v12060601)</a>.</li>
 </ul>
 
+  <h2>
+Other work
+</h2>
+<ul>
+  <li>COVID-19: laboratory evaluations of serological assays. <b>Public Health England</b>. <a href="https://www.gov.uk/government/publications/covid-19-laboratory-evaluations-of-serological-assays" target="_blank">Evaluation reports</a>. </b>April 2020 - May 2021</b>.</li>
+  </ul>
+  
 <h2>
 Presentations
 </h2>
