--- a/cv/index.html
+++ b/cv/index.html
@@ -212,9 +212,9 @@ Other work
 </h2>
 <ul>
   <li>COVID-19: laboratory evaluations of serological assays. <a href="https://www.gov.uk/government/publications/covid-19-laboratory-evaluations-of-serological-assays" target="_blank">Public Health England</a>. </b>April 2020 - May 2021</b>.</li>
-  <ul><li>Evaluation reports for multiple commericial serology platforms for the detection of anti-SARS-CoV-2 antibodies. </li></ul>
-  <li>National flu and COVID-19 surveillance reports. <a href="https://www.gov.uk/government/statistics/national-flu-and-covid-19-surveillance-reports" target="_blank">Public Health England</a>. </b>April 2020 - May 2021</b>.</li>
-  <ul><li>Weekly reports containing sero-prevalence data generated within my lab.</li></ul>
+  <ul><li>Independent evaluation reports for multiple commercial serology platforms and assays for the detection of anti-SARS-CoV-2 antibodies. </li></ul>
+  <li>National flu and COVID-19 surveillance reports. <a href="https://www.gov.uk/government/statistics/national-flu-and-covid-19-surveillance-reports" target="_blank">Public Health England</a>. </b>January 2020 - Present</b>.</li>
+  <ul><li>Weekly reports containing sero-prevalence data (anti-spike and anti-nucleocapsid) generated within my lab.</li></ul>
   </ul>
   
 <h2>
