--- a/cv/index.html
+++ b/cv/index.html
@@ -107,6 +107,21 @@ Publications</h2>
 <ul>
 <h3><left-align>2021</left-align></h3>
   
+  <li>Extended interval BNT162b2 vaccination enhances peak antibody generation in older people.
+     <i> Parry HM, Bruton R, Stephens C, Brown K, Amirthalingam G, Hallis B, <b><u>Otter AD</b></u>, Zuo J, Moss P. </i>
+   <b> medRxiv, 2021</b>
+(<a href="https://www.medrxiv.org/content/10.1101/2021.05.15.21257017v1" target="_blank">10.1101/2021.05.15.21257017</a>).</li>
+  
+  <ul><li>Press coverage: 
+
+<a href="https://www.nature.com/articles/d41586-021-01299-y" target="_blank">Nature</a>, 
+
+<a href="https://www.theguardian.com/science/2021/may/14/delay-in-giving-second-jabs-of-pfizer-vaccine-improves-immunity" target="_blank">The Guardian</a>, 
+
+<a href="https://www.independent.co.uk/news/science/covid-vaccine-second-dose-research-b1846417.html" target="_blank">The Independent</a>.
+  
+</li></ul>
+  
    <li>Prior SARS-CoV-2 infection rescues B and T cell responses to variants after first vaccine dose.
      <i> Reynolds CJ, Pade C, Jibbons JM, Butler DK, <b><u>Otter AD</b></u>, Menacho K, Fontana M, Smit A, Sackville-West JE, Cutino-Moguel T, Maini MK, Chain B, Noursadeghi M,  
      UK COVIDsortium Immune Correlates Network, Brooks T, Semper A, Manisty C, Treibel TA, Moon JC, UK COVIDsortium Investigators, Valdes AM, McKnight A, Altmann DM and Boyton R. </i>
