--- a/cv/index.html
+++ b/cv/index.html
@@ -262,6 +262,8 @@ Other work
 Presentations
 </h2>
 <ul>
+<li><i>Otter AD</i>, Hall V on behalf of SIREN. Post-vaccine analysis within the SIREN cohort. <b><a href="https://www.gov.uk/government/groups/joint-committee-on-vaccination-and-immunisation">Joint Committee on Vaccination and Immunisation (JCVI)</a>. </b>October 2021</b>.</li>
+<li><i>Otter AD</i>, Hallis B on behalf of PHE Porton Down serosurveillance laboratory. SARS-CoV-2 Serology assay evluations in the face of vaccinations and VOC. <b><a href="https://www.gov.uk/government/publications/g7-health-ministers-meeting-june-2021-communique/g7-therapeutics-and-vaccines-clinical-trials-charter">G7 Therapeutics and Vaccines Clinical Trials Charter</a>. </b>October 2021</b>.</li>
 <li><i>Otter AD</i>. Variants of concern and serology. <b><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/global-research-on-novel-coronavirus-2019-ncov/solidarity-2-global-serologic-study-for-covid-19" target="_blank">World Health Organisation, Solidarity II</a>. </b>March 2021</b>.</li>
 <li><i>Otter AD</i>. Meet the Bioscience Alumni. <b>Cardiff University School of Biosciences</b>. March 2021. </li>
 <li><i>Otter AD</i>. From Anthrax to SARS-CoV-2, the inadvertent path to a career in public Health.<b> The University of Bradford</b>. March 2021.</li>
