--- a/cv/index.html
+++ b/cv/index.html
@@ -259,18 +259,18 @@ Other work
   </ul>
   
 <h2>
-Presentations
+Invited presentations
 </h2>
 <ul>
-<li><i>Otter AD</i>, Hall V on behalf of SIREN. Post-vaccine analysis within the SIREN cohort. <b><a href="https://www.gov.uk/government/groups/joint-committee-on-vaccination-and-immunisation">Joint Committee on Vaccination and Immunisation (JCVI)</a>. </b>October 2021</b>.</li>
-<li><i>Otter AD</i>, Hallis B on behalf of PHE Porton Down serosurveillance laboratory. SARS-CoV-2 Serology assay evluations in the face of vaccinations and VOC. <b><a href="https://www.gov.uk/government/publications/g7-health-ministers-meeting-june-2021-communique/g7-therapeutics-and-vaccines-clinical-trials-charter">G7 Therapeutics and Vaccines Clinical Trials Charter</a>. </b>October 2021</b>.</li>
-<li><i>Otter AD</i>. Variants of concern and serology. <b><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/global-research-on-novel-coronavirus-2019-ncov/solidarity-2-global-serologic-study-for-covid-19" target="_blank">World Health Organisation, Solidarity II</a>. </b>March 2021</b>.</li>
-<li><i>Otter AD</i>. Meet the Bioscience Alumni. <b>Cardiff University School of Biosciences</b>. March 2021. </li>
-<li><i>Otter AD</i>. From Anthrax to SARS-CoV-2, the inadvertent path to a career in public Health.<b> The University of Bradford</b>. March 2021.</li>
-<li><i>Otter AD</i>. From Anthrax to SARS-CoV-2, the inadvertent path to a career in public Health.<b> The University of Kent</b>. February 2021.</li>
-<li><i>Otter AD</i>. SARS-CoV-2 virology and diagnostics.<b> The University of Plymouth</b>. November 2020.</li>
-<li><i>Otter AD</i>. Understanding the role of Rv1255c, a TetR regulator absent from all <i>Mycobacterium bovis</i> strains.<b> The Jenner Institute</b>. August 2018.</li>
-  <li><i>Otter AD</i>. CATs: controlling the hunger of <i>M. tuberculosis</i>? <b>Royal Society of Medicine</b>. October 2016.</li>
+  <li><b><i>Otter AD</i></b> and Hall V, on behalf of SIREN. Post-vaccine analysis within the SIREN cohort. <b><a href="https://www.gov.uk/government/groups/joint-committee-on-vaccination-and-immunisation">Joint Committee on Vaccination and Immunisation (JCVI)</a>. </b>October 2021</b>.</li>
+<li><b><i>Otter AD</i></b> and Hallis B, on behalf of PHE Porton Down serosurveillance laboratory. SARS-CoV-2 Serology assay evluations in the face of vaccinations and VOC. <b><a href="https://www.gov.uk/government/publications/g7-health-ministers-meeting-june-2021-communique/g7-therapeutics-and-vaccines-clinical-trials-charter">G7 Therapeutics and Vaccines Clinical Trials Charter</a>. </b>September 2021</b>.</li>
+<li><b><i>Otter AD</i></b> and Hallis B. Variants of concern and serology. <b><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/global-research-on-novel-coronavirus-2019-ncov/solidarity-2-global-serologic-study-for-covid-19" target="_blank">World Health Organisation, Solidarity II</a>. </b>March 2021</b>.</li>
+<li><b><i>Otter AD</i></b>. Meet the Bioscience Alumni. <b>Cardiff University School of Biosciences</b>. March 2021. </li>
+<li><b><i>Otter AD</i></b>. From Anthrax to SARS-CoV-2, the inadvertent path to a career in public Health.<b> The University of Bradford</b>. March 2021.</li>
+<li><b><i>Otter AD</i></b>. From Anthrax to SARS-CoV-2, the inadvertent path to a career in public Health.<b> The University of Kent</b>. February 2021.</li>
+<li><b><i>Otter AD</i></b>. SARS-CoV-2 virology and diagnostics.<b> The University of Plymouth</b>. November 2020.</li>
+<li><b><i>Otter AD</i></b>. Understanding the role of Rv1255c, a TetR regulator absent from all <i>Mycobacterium bovis</i> strains.<b> The Jenner Institute</b>. August 2018.</li>
+  <li><b><i>Otter AD</i></b>. CATs: controlling the hunger of <i>M. tuberculosis</i>? <b>Royal Society of Medicine</b>. October 2016.</li>
 </ul>
 
 <h2>Education</h2>
