--- a/cv/index.html
+++ b/cv/index.html
@@ -104,8 +104,11 @@ Professional Training Year (September 2013 - September 2014) in which practical 
 
 <h2>
 Publications</h2>
-<ul>
+
 <h3><left-align>2021</left-align></h3>
+  <li>For an up to date list, please visit my <a href="https://scholar.google.co.uk/citations?user=-ckBV9wAAAAJ&hl=en" target="_blank">Google Scholar</a>) profile.</li>
+ <ul> 
+  
   
   <li>Extended interval BNT162b2 vaccination enhances peak antibody generation in older people.
      <i> Parry HM, Bruton R, Stephens C, Brown K, Amirthalingam G, Hallis B, <b><u>Otter AD</b></u>, Zuo J, Moss P. </i>
@@ -263,7 +266,7 @@ Invited presentations
 </h2>
 <ul>
   <li><b><i>Otter AD</i></b> and Hall V, on behalf of SIREN. Post-vaccine analysis within the SIREN cohort. <b><a href="https://www.gov.uk/government/groups/joint-committee-on-vaccination-and-immunisation">Joint Committee on Vaccination and Immunisation (JCVI)</a>. </b>October 2021</b>.</li>
-<li><b><i>Otter AD</i></b> and Hallis B, on behalf of PHE Porton Down serosurveillance laboratory. SARS-CoV-2 Serology assay evluations in the face of vaccinations and VOC. <b><a href="https://www.gov.uk/government/publications/g7-health-ministers-meeting-june-2021-communique/g7-therapeutics-and-vaccines-clinical-trials-charter">G7 Therapeutics and Vaccines Clinical Trials Charter</a>. </b>September 2021</b>.</li>
+<li><b><i>Otter AD</i></b> and Hallis B, on behalf of PHE Porton Down serosurveillance laboratory. SARS-CoV-2 Serology assay evaluations in the face of vaccinations and VOC. <b><a href="https://www.gov.uk/government/publications/g7-health-ministers-meeting-june-2021-communique/g7-therapeutics-and-vaccines-clinical-trials-charter">G7 Therapeutics and Vaccines Clinical Trials Charter</a>. </b>September 2021</b>.</li>
 <li><b><i>Otter AD</i></b> and Hallis B. Variants of concern and serology. <b><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/global-research-on-novel-coronavirus-2019-ncov/solidarity-2-global-serologic-study-for-covid-19" target="_blank">World Health Organisation, Solidarity II</a>. </b>March 2021</b>.</li>
 <li><b><i>Otter AD</i></b>. Meet the Bioscience Alumni. <b>Cardiff University School of Biosciences</b>. March 2021. </li>
 <li><b><i>Otter AD</i></b>. From Anthrax to SARS-CoV-2, the inadvertent path to a career in public Health.<b> The University of Bradford</b>. March 2021.</li>
