--- a/cv/index.html
+++ b/cv/index.html
@@ -104,7 +104,7 @@ Professional Training Year (September 2013 - September 2014) in which practical 
 
 <h2>
 Publications</h2>
-  <br>For an up to date list, please visit my <a href="https://scholar.google.co.uk/citations?user=-ckBV9wAAAAJ&hl=en" target="_blank">Google Scholar</a>) profile.</br>
+  <br>For an up to date list, please visit my <a href="https://scholar.google.co.uk/citations?user=-ckBV9wAAAAJ&hl=en" target="_blank">Google Scholar</a> profile.</br>
 
 <h3><left-align>2021</left-align></h3>
   <ul>
