--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Welcome to My Website</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-9z5qZlSAtVgF9K2MZK/zg+g6PbwT+t8BB7J0W2smgJ8ZeLrhpRe0OFMsCXwS/s3Hoz9XjpGTHA+RW4Yb4br4hA==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome</h1>
     <nav>
       <ul>
         <li><a href="about.html">About</a></li>
@@ -18,10 +21,26 @@
     </nav>
   </header>
   <main>
-    <p>This is the landing page for my website. Please use the navigation above to explore further.</p>
+    <p>Test.</p>
   </main>
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <div class="social-icons">
+      <a href="https://twitter.com/asherichia" target="_blank" class="social-icon twitter">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://github.com/asherichia" target="_blank" class="social-icon github">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/ashleyotter" target="_blank" class="social-icon linkedin">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="mailto:ashley.otter@ukhsa.gov.uk" class="social-icon email">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://scholar.google.com/citations?user=ckBV9wAAAAJ" target="_blank" class="social-icon scholar">
+        <i class="fas fa-graduation-cap"></i>
+      </a>
+    </div>
   </footer>
 </body>
 </html>
