--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <a href="https://www.linkedin.com/in/ashley-otter" target="_blank" class="footer-icon" aria-label="LinkedIn">
       <i class="fab fa-linkedin-in"></i>
     </a>
-    <a href="https://scholar.google.com/citations?user=ckBV9wAAAAJ" target="_blank" class="footer-icon" aria-label="Google Scholar">
+    <a href="https://scholar.google.co.uk/citations?hl=en&user=-ckBV9wAAAAJ" target="_blank" class="footer-icon" aria-label="Google Scholar">
       <i class="fas fa-graduation-cap"></i>
     </a>
     <a href="https://github.com/asherichia" target="_blank" class="footer-icon" aria-label="GitHub">
