Updated code - BlueSky and animations

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
     <a href="https://twitter.com/asherichia" target="_blank" class="footer-icon" aria-label="Twitter">
       <i class="fab fa-twitter"></i>
     </a>
+    <a href="https://bsky.app/profile/asherichia.bsky.social" target="_blank" class="footer-icon" aria-label="Bluesky">
+      <i class="fas fa-cloud"></i>
+    </a>
     <a href="https://www.linkedin.com/in/ashley-otter" target="_blank" class="footer-icon" aria-label="LinkedIn">
       <i class="fab fa-linkedin-in"></i>
     </a>
