--- a/research-grid-layout.html
+++ b/research-grid-layout.html
@@ -487,7 +487,7 @@
         </div>
         <div class="card-content">
           <p class="card-description">
-            Understanding broad MPXV and Smallpox vaccination-derived immunity
+            Understanding broad MPXV and Smallpox vaccination-derived immunity in regards to immunodominant antigens.
           </p>
           <div class="publications-label">Key paper(s):</div>
           <div class="key-publication">
@@ -507,7 +507,7 @@
         </div>
         <div class="card-content">
           <p class="card-description">
-            Developing serological assays to enable serosurveillance and vaccine-prioritisation
+            Developing serological assays to assess immunity, as well as performing MPXV-specific serosurveillance and determining vaccine-prioritisation.
           </p>
           <div class="publications-label">Key paper(s):</div>
           <div class="key-publication">
@@ -600,6 +600,9 @@
     <a href="https://twitter.com/asherichia" target="_blank" class="footer-icon" aria-label="Twitter">
       <i class="fab fa-twitter"></i>
     </a>
+    <a href="https://bsky.app/profile/asherichia.bsky.social" target="_blank" class="footer-icon" aria-label="Bluesky">
+      <i class="fas fa-cloud"></i>
+    </a>
     <a href="https://www.linkedin.com/in/ashley-otter" target="_blank" class="footer-icon" aria-label="LinkedIn">
       <i class="fab fa-linkedin-in"></i>
     </a>
@@ -614,6 +617,7 @@
     </a>
   </div>
 </footer>
+
   </div>
   
   <!-- JavaScript for animations and interactions -->
