--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <Title> Dr Ash Otter - </Title>
+  <meta name="description" content="I'm an immunologist working to understand emerging viruses and vaccines.">
   <meta name="google-site-verification" content="-4lgZhRwmxA9kxVl32wK2AEU_RMlHaou25VWVkQAyig" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
