--- a/mpox.html
+++ b/mpox.html
@@ -332,7 +332,7 @@
         <img src="assets/data/mpox-comparison.png" alt="Lorem ipsum" class="detail-header-image">
         <div class="detail-title-container">
           <h1 class="detail-title">Mpox</h1>
-          <div class="detail-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+          <div class="detail-subtitle">Elucidating immunity to Mpox infection and Smallpox vaccination.</div>
         </div>
       </div>
       
@@ -355,7 +355,7 @@
           <h2 class="section-title">Key Findings</h2>
           <ul class="detail-list">
             <li class="detail-list-item">
-              <strong>Antigen recognition: </strong> Diverse Orthopoxvirus antigens are recognised both post-vaccination and post-infection.          </li>
+              <strong>Antigen recognition: </strong> Diverse Orthopoxvirus antigens are recognised by individuals both post-vaccination and post-infection.          </li>
             <li class="detail-list-item">
               <strong>Immunodominance is shared:</strong> Whilst both vaccination and infection induce subtle differences in immune responses, they induce broadly the same response.         </li>
             <li class="detail-list-item">
@@ -424,14 +424,14 @@
           <h2 class="team-title">Research Team</h2>
           <div class="team-members">
             <div class="team-member">
-              <img src="assets/images/profile.jpg" alt="Dr. Ash Otter" class="team-member-image">
+              <img src="assets/team/profile.jpg" alt="Dr. Ash Otter" class="team-member-image">
               <div class="team-member-info">
                 <h4>Dr. Ash Otter</h4>
                 <p>Group Leader</p>
               </div>
             </div>
             <div class="team-member">
-              <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=1MhmsJUAAAAJ&citpid=3" alt="Dr. Scott Jones">
+              <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=1MhmsJUAAAAJ&citpid=3" alt="Dr. Scott Jones" class="team-member-image">
               <div class="team-member-info">
                 <h4>Dr. Scott Jones</h4>
                 <p>Senior Research Scientist</p>
