Updated html links

--- a/lab-programmes.html
+++ b/lab-programmes.html
@@ -345,7 +345,7 @@
     <!-- Header section -->
     <div class="header-section">
       <h1 class="page-title">Lab Programmes</h1>
-      <p class="page-subtitle">Assortment of random tools for the lab/bioinformatics/data analysis, all to make life a bit easier and more stragithforward</p>
+      <p class="page-subtitle">Assortment of random tools for the lab/bioinformatics/data analysis, all to make life a bit easier and more straightforward</p>
       <p class="page-description">
         See         <a href="https://github.com/asherichia">Github</a> for further details.
       </p>
@@ -400,7 +400,7 @@
               <div class="feature-item">Plate visualisation once assigned</div>
               <div class="feature-item">HTML in browser use</div>
             </div>
-            <a href="https://asherichia.github.io/PlateFileParser/PlateParser.html" class="launch-btn">
+            <a href="https://asherichia.github.io/PlateFileParser/PlateParser.html" target="_blank" class="launch-btn"> 
               Launch Tool <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -429,7 +429,7 @@
               <div class="feature-item">CSV data import with PapaParse</div>
               <div class="feature-item">Interactive Recharts visualization</div>
             </div>
-            <a href="iqc-monitor.html" class="launch-btn">
+            <a href="iqc-monitor.html" target="_blank" target="_blank" class="launch-btn">
               Launch Dashboard <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
