Updated html links

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
       <div class="hero-buttons">
         <a href="about.html" class="btn">About</a>
         <a href="research-grid-layout.html" class="btn">Research</a>
+                <a href="lab-programmes.html" class="btn">Tools</a>
         <a href="mailto:ashley.otter@ukhsa.gov.uk" class="btn">Contact</a>
       </div>
     </div>
