--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="profile-container">
         <img class="profile-image" src="assets/team/profile.jpg" alt="Dr Ash Otter" />
       </div>
-      <p>I'm <b> Dr Ash Otter</b>, an immunologist working to understand<br> emerging viruses and vaccines.</p>
+      <p>I'm <b> Dr Ash Otter</b>, a scientist interested in all things microbiology, AI, and working to emerging viruses and vaccines.</p>
       <div class="hero-buttons">
         <a href="about.html" class="btn">About</a>
         <a href="research-grid-layout.html" class="btn">Research</a>
