--- a/about.html
+++ b/about.html
@@ -344,7 +344,7 @@
         <div class="bio-content">
           <img src="assets/team/profile.jpg" alt="Dr Ash Otter" class="bio-image">
           <div class="bio-text">
-            <p>I'm <b>Dr Ash Otter</b>, a microbiologist, with experience across immunology and virology, specialising in understanding <b>emerging viruses </b>and<b> vaccines</b>.</p>
+            <p>I'm <b>Dr Ash Otter</b>, a microbiologist with experience across immunology and virology, specialising in understanding <b>emerging viruses </b>and<b> vaccines</b>.</p>
             <p>Currently, I hold a <b>Group Leader / PI</b> position within the Emerging Pathogen Serology group at <b>UK Health Security Agency</b> (UKHSA).</p>
             <p>My research spans a wide range pathogens but focusses on utilising serology and immunology tools for public health and translational potential. This includes from gaining our first fundamental understanding of the immunology of emerging pathogens, all the way through to using this knowledge to inform on new vaccine and diagnostic candidates.</p>
             <p>I have extensive interests in all things microbial (not just viruses...), with particular interests across zoonoses, high-throughput testing, application of AI (LLMs, ML algorithms/training), and developing new methods to further elucidate pathogens.
